lync/tests/fails/clojures_are_not_supported.scm
(define this-is-fine
  (lambda (a)
    (let ((this-is-not (lambda (b) (+ a b))))
      0)))
